--- a/index.html
+++ b/index.html
@@ -59,12 +59,17 @@ font-weight: bold;
 			<td class="nav">
 				<p class="nameNav">Виды спорта:</p>
 				<ul> 
-					<li><a href="https://ru.wikipedia.org/wiki/Конькобежный_спорт">конькобежный спорт</a></li>
-					<li><a href="https://ru.wikipedia.org/wiki/Биатлон">биатлон</a></li>
-					<li><a href="https://ru.wikipedia.org/wiki/Футбол">футбол</a></li>
-					<li><a href="https://ru.wikipedia.org/wiki/Стрельба_из_лука_(вид_спорта)">стрельба из лука</a></li>
-					<li><a href="https://ru.wikipedia.org/wiki/Прыжок_в_длину">прыжки в длину</a></li>
-					<li><a href="https://ru.wikipedia.org/wiki/Прыжок_в_высоту">прыжки в высоту</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Конькобежный_спорт">конькобежный спорт</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Бадминтон_на_Олимпийских_играх">бадминтон</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Баскетбол_на_Олимпийских_играх">баскетбол</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Бокс_на_Олимпийских_играх">бокс</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Борьба_на_Олимпийских_играх">борьба</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Велоспорт_на_Олимпийских_играх">велоспорт</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Волейбол_на_Олимпийских_играх">волейбол</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Футбол">футбол</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Стрельба_из_лука_(вид_спорта)">стрельба из лука</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Прыжок_в_длину">прыжки в длину</a></li>
+					<li class="menu__link"><a href="https://ru.wikipedia.org/wiki/Прыжок_в_высоту">прыжки в высоту</a></li>
 				</ul>
 			</td>
 			<td class="content">
